# google-cluster-prediction

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  README.md
config/: common.json  default.json  explore.json  explorer.json  learn.json  learner.json  session.json
input/: .gitignore  Makefile  job_events.sql  jobs.sql
lib/: config.py  data.py  explorer.py  hyperband.py  input.py  job_events.py  learner.py  manager.py  model.py  optimizer.py  support.py  system.py  target.py  task_usage.py  trainer.py
prediction/: __init__.py  baseline.py  checkpoint.py  comparator.py  config.py  database.py  experiment.py  explorer.py  hyperband.py  index.py  input.py  learner.py  manager.py  model.py  random.py  reference.py  saver.py  session.py  state.py  support.py  teacher.py  test_config.py  test_hyperband.py  test_input.py  test_manager.py  test_support.py  test_tuner.py  trainer.py  tuner.py
src/: main.rs
tests/: Makefile  test_data.py  test_hyperband.py  test_input.py  test_schedule.py
