[package]
name = "predictor"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/learning-on-chip/predictor"
homepage = "https://github.com/learning-on-chip/predictor"
description = "Predictor is a tool for predicting workload."

[dependencies]
arguments = "*"
sql = "*"
sqlite = "*"
statistics = "*"
